# qlime

./: .gitignore  Readme.md  pyproject.toml  setup.py
qlime/: model.py  optimizer.py  qlime.py
src/qlime/: optimizer.py  qlime.py
test/qlime/: qlime_test.py
