[build-system]
requires= [ "setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='qlime'
version='0.1'
description='QLIME (Quantum Local Interpretable Model-agnostic Explanations) is a Python package for interpreting quantum neural networks using local surrogate models.'
readme= "Readme.md"
author=[{ name= " Quantum Lime", email = "quantumlime@outlook.com"}]
license = { file = "LICENSE" }
dependencies = [
        'numpy',
        'scikit-learn',
        'qiskit',
        'matplotlib'
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/lirandepira/qlime"